# music-transposer

./: .gitignore  Dockerfile  MANIFEST.in  pyproject.toml  requirements.txt  setup.py  test_all.py  transpose.py  web_transposer.py
bpmusictransposer/: bpparser.py  logger.py  musicgenerator.py  musicparser.py  musicparser2.py  newmusicparser.py  newtranspose.py  notetoken.py  threadedworker.py  transpose.py  tune.py
bpmusictransposer/parserdefs/: BWW.v1.0.json  BWW.v1.0.json.new
bpmusictransposer/rest/: __init__.py  rest.py
bpmusictransposer/rest/static/: form.js  waitpage.js
bpmusictransposer/rest/templates/: base.html.jinja  form.html.jinja  waitpage.js.jinja
bpmusictransposer/templates/: base.ly.jinja
omnitest/: omnitest.bww
parserdefs/: BWW.v1.0.json
templates/: form.html.jinja  waitpage.html.jinja  waitpage.js.jinja
testdata/: omnitest.bww
tests/: test_all.py  test_basic_parsing.py  test_compound_parsing  test_parser.py  test_piobaireachd_parsing.py
tests/newparser/: test_all.py  test_basic_parsing.py  test_compound_parsing  test_header_parser.py  test_piobaireachd_parsing.py
transposer-data/parserdefs/: BWW.v1.0.json
