[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmusictransposer"
version = "0.0.1"
authors = [
  { name="David Lochridge", email="David.R.Lochridge@gmail.com" }
]
maintainers = [
  { name="David Lochridge", email="David.R.Lochridge@gmail.com" }
]
description = "A package for transposing varied bagpipe music formats into LilyPond and, more importantly, human-readable sheet music"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["bagpipe", "music", "web-service"]
requires-python = ">=3.10"
dependencies = [
  "jinja2"
]
classifiers = [
  "Programming Languages :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent"
]

[project.scripts]
transpose-music = "bpmusictransposer.transpose:main"

[project.optional-dependencies]
web = ["flask"]

[project.urls]
Homepage = "https://github.com/dloch/music-transposer"
Issues = "https://github.com/dloch/music-transposer/issues"

[tool.setuptools]
packages = ["bpmusictransposer", "bpmusictransposer.rest"]
